--- a/views/html/listasEspecifica.html
+++ b/views/html/listasEspecifica.html
@@ -9,23 +9,27 @@
   <link rel="stylesheet" 		href="../css/personal.css">  
   <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
   <link rel="stylesheet" href= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"> 
+  <link href="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
   <script src= "https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
   <script src= "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"> </script> 
   <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"> </script> 
   <script src= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"> </script> 
+  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.min.js"></script>
+
+
 </head> 
 
 
-<body id="top" style="background-color: white;"></body>
+<body id="top" style="background-color: white; margin:0%;"></body>
 
 
 <!-- TABLA DE LISTA DE PRECIOS
 ================================================== -->
 
 
-<section class="container-fluid" id="portfolio" style="height:500px">
+<section class="container-fluid" id="portfolio" style="height:500px" style="margin:0%;padding:0%">
 
   <div class="intro-wrap col-sm-12" style="height:200px;display:flex;align-items:space-around">
     <div class="row  section-intro  animate-this" style="justify-content: center;;">
@@ -39,14 +43,23 @@
       </div>   		
       
     </div> <!-- end row section-intro -->  
-    <div class="container">  
+
+    <div class="container-fluid" style="padding:5%">  
       <input type="text" style="margin-top:5%;"id="myInputCodigo" onkeyup="myFunction()" placeholder="Buscar por codigo..." title="Type in a name">
-      <table class="table-striped border-success table-sm" style="background-color:rgb(255, 255, 255);table-layout: initial;" id="myTable"> 
-        <thead class="thead-dark"> 
+      <table
+       class="table-striped border-success table-sm" 
+       style="background-color:rgb(255, 255, 255)" 
+       width=100%
+       id="myTable"
+       data-sticky-header="true"
+       data-sticky-header-offset-right="5%"
+       data-sticky-header-offset-left="5%"
+       data-sticky-header-offset-y="30">
+        <thead class="thead-dark" > 
           <tr> 
             <th data-field="cod_articulo">  Articulo</span style="text-align: center;"></th> 
             <th data-field="descrip_arti">  Descripcion</span> </th> 
-            <th data-field="precio_vta" class="precio">    Precio sin IVA </span> </th>
+            <th data-field="precio_vta"class="precio">    Precio sin IVA </span> </th>
             <th data-field="precio_vta_final"class="precio">   Precio con IVA </span> </th>  
           </tr> 
         </thead> 
