--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -47,12 +47,33 @@
 ================================================== -->
 <section class="container-fluid" id="portfolio">
 
-	<iframe width="402" height="346" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=2D656514BD3B8EE5%21121&authkey=%21AIAXUIZ20bliJQs&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
+	<div class="intro-wrap col-sm-12 " >
+		<div class="row  section-intro  animate-this">
+			<div class="col-sm-12">
+				<h1>Ofertas del mes</h1>  			
+				<p class="lead">Precios finales</p>	   			
+			</div>   		
+		</div> <!-- end row section-intro -->   		
+	</div> <!-- end intro-wrap -->
 
+
+	<div class="container-fluid competencias" style="justify-content: left;" >
+		<div class="row">
+		  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
+			  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
+				<h2 class="card-title titulo" style="color:whitesmoke"></h2>
+				<h5 class="card-text detalle" style="color:whitesmoke"></h5>
+				<img class="imagenOferta">
+				<h2 class="card-title precio" style="color:whitesmoke"></h2>
+			  </div>
+		  </div>
+		</div>  
+	</div> 
 
 </section> 
 
 
-</body>
 
+</body>
+<script src="../js/ofertasService.js"></script>
 </html>
