--- a/views/html/listasEspecifica.html
+++ b/views/html/listasEspecifica.html
@@ -4,25 +4,31 @@
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
   <title> Lista de precios </title> 
-  <script src="../js/src/jquery.js"></script>
-  <script src="../js/src/helpers.js"></script>
-  <link rel="stylesheet" 		href="../css/personal.css">  
-  <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
-  <link rel="stylesheet" href= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"> 
-  <link href="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-  <script src= "https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
-  <script src= "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"> </script> 
-  <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"> </script> 
-  <script src= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"> </script> 
-  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.min.js"></script>
-
-
+  <!-- css styles             --><link rel="stylesheet" type="text/css" href="../css/style.css">
+  <!-- css main               --><link rel="stylesheet" type="text/css" href="../css/main.css">
+  <!-- css personal           --><link rel="stylesheet" href="../css/personal.css">  
+  <!-- sticky header          --><link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
+  <!-- sticky header          --><link rel="stylesheet" href= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"> 
+  <!-- sticky header          --><link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet">
+  <!-- sticky header          --><link rel="stylesheet" href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">
+  <!-- jquery                 --><script src="../js/src/jquery.js"></script>
+  <!-- helpers                --><script src="../js/src/helpers.js"></script>
+  <!-- sticky header          --><script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script> 
+  <!-- sticky header          --><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"> </script> 
+  <!-- sticky header          --><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"> </script> 
+  <!-- sticky header          --><script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"> </script> 
+  <!-- sticky header          --><script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.min.js"></script>
+  <!-- exportacion            --><script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
+  <!-- exportacion            --><script src="https://unpkg.com/tableexport.jquery.plugin/libs/jsPDF/jspdf.min.js"></script>
+  <!-- exportacion            --><script src="https://unpkg.com/tableexport.jquery.plugin/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
+  <!-- exportacion            --><script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
+  <!-- fija columna 1         --><script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.js"></script>
+  <!-- table para mobile      --><script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
+  <!-- print pantalla         --><script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/print/bootstrap-table-print.min.js"></script>
+  <!-- loading template       --><link href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">
 </head> 
 
 
-<body id="top" style="background-color: white; margin:0%;"></body>
 
 
 <!-- TABLA DE LISTA DE PRECIOS
@@ -30,45 +36,58 @@
 
 
 <section class="container-fluid" id="portfolio" style="height:500px" style="margin:0%;padding:0%">
-
-  <div class="intro-wrap col-sm-12" style="height:200px;display:flex;align-items:space-around">
-    <div class="row  section-intro  animate-this" style="justify-content: center;;">
-      <div class="col-sm-6" style="display:flex; align-items: left">
-        <h1>Fram</h1>  			
-        <p class="lead">Ultima actulizacion: Sep 2020</p>	 
-      </div>  	
-        <div class="col-sm-6"> 
-          <button id="exportButton" class="btn btn-lg btn-danger clearfix" style="background-color:orange"><span class="fa fa-file-excel-o"></span> Exportar a Excel</button>
-        </div>
-      </div>   		
-      
-    </div> <!-- end row section-intro -->  
-
-    <div class="container-fluid" style="padding:5%">  
-      <input type="text" style="margin-top:5%;"id="myInputCodigo" onkeyup="myFunction()" placeholder="Buscar por codigo..." title="Type in a name">
-      <table
-       class="table-striped border-success table-sm" 
-       style="background-color:rgb(255, 255, 255)" 
-       width=100%
-       id="myTable"
-       data-sticky-header="true"
-       data-sticky-header-offset-right="5%"
-       data-sticky-header-offset-left="5%"
-       data-sticky-header-offset-y="30">
-        <thead class="thead-dark" > 
-          <tr> 
-            <th data-field="cod_articulo">  Articulo</span style="text-align: center;"></th> 
-            <th data-field="descrip_arti">  Descripcion</span> </th> 
-            <th data-field="precio_vta"class="precio">    Precio sin IVA </span> </th>
-            <th data-field="precio_vta_final"class="precio">   Precio con IVA </span> </th>  
-          </tr> 
-        </thead> 
-      </table> 
-  </div> 
-  </div> <!-- end intro-wrap -->
-  
-
+	<div class="intro-wrap col-sm-12" style="height:200px;">
+    	<div class="row  section-intro  animate-this" style="justify-content: center;">
+      		<div class="col-sm-12"></div>
+       	 	<h1>Fram</h1></br>  			
+       	 	<p class="lead">Ultima actulizacion: Sep 2020</p>	 
+				<div class="container-fluid" style="padding:5%">  
+					<table
+					 class="table-striped border-success table-sm" 
+					 style="background-color:rgb(255, 255, 255)" 
+					 width=100%
+					 id="myTable"
+					 data-sticky-header="true"
+					 data-sticky-header-offset-right="5%"
+					 data-sticky-header-offset-left="5%"
+					 data-buttons-class="danger"
+					 data-search-align="left"
+					 data-search="true"
+					 data-show-export="true"
+					 data-show-columns="true"
+					 data-key-events="true"
+					 data-fixed-columns="true"
+					 data-show-print="true"
+					 data-fixed-right-number=1
+					 data-toolbar-align="left"
+					 data-loading-template="loadingTemplate">
+						<thead class="thead-dark"> 
+							  <tr> 
+								  <th data-field="cod_articulo">  					Articulo		</span style="text-align: center;"></th> 
+								  <th data-field="descrip_arti">  					Descripcion		</span> </th> 
+								  <th data-field="precio_vta"class="precio">    		Precio sin IVA 	</span> </th>
+								  <th data-field="precio_vta_final"class="precio">  	Precio con IVA 	</span> </th>  
+							  </tr> 
+						</thead> 
+					</table> 
+				</div> 
+		
+		
+		
+		
+		
+		
+		
+		
+		</div>  	
+		  
+		
+	</div>   		
 </section>
+
+
+
+
 
 <script src="../js/listaEspecificaService.js"></script>
 
