respuesta ruta lsitas modificado

--- a/views/html/listasEspecifica.html
+++ b/views/html/listasEspecifica.html
@@ -35,8 +35,8 @@
 ================================================== -->
 
 
-<section class="container-fluid" id="portfolio" style="height:500px" style="margin:0%;padding:0%">
-	<div class="intro-wrap col-sm-12" style="height:200px;">
+<section class="container-fluid" id="portfolio" style="height:10%" style="margin:0%;padding:0%">
+	<div class="intro-wrap col-sm-12" style="height:80%;">
     	<div class="row  section-intro  animate-this" style="justify-content: center;">
       		<div class="col-sm-12"></div>
        	 	<h1>Fram</h1></br>  			
@@ -51,6 +51,8 @@
 					 data-sticky-header-offset-right="5%"
 					 data-sticky-header-offset-left="5%"
 					 data-buttons-class="danger"
+					 data-mobile-responsive="true"
+					 data-mobile-responsive="true"
 					 data-search-align="left"
 					 data-search="true"
 					 data-show-export="true"
@@ -58,15 +60,15 @@
 					 data-key-events="true"
 					 data-fixed-columns="true"
 					 data-show-print="true"
-					 data-fixed-right-number=1
+					 
 					 data-toolbar-align="left"
 					 data-loading-template="loadingTemplate">
 						<thead class="thead-dark"> 
 							  <tr> 
 								  <th data-field="cod_articulo">  					Articulo		</span style="text-align: center;"></th> 
 								  <th data-field="descrip_arti">  					Descripcion		</span> </th> 
-								  <th data-field="precio_vta"class="precio">    		Precio sin IVA 	</span> </th>
-								  <th data-field="precio_vta_final"class="precio">  	Precio con IVA 	</span> </th>  
+								  <th data-field="precio_vta"class="precio">    	Precio sin IVA 	</span> </th>
+								  <th data-field="precio_vta_final"class="precio">  Precio con IVA 	</span> </th>  
 							  </tr> 
 						</thead> 
 					</table> 
