--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
-		<title>Peli vs Peli</title>
+		<title>Ofertas del mes</title>
 		<script src="../js/src/jquery.js"></script>
 		<script src="../js/src/helpers.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
