listas especificas funcionando

--- a/views/html/ofertas copy.html
+++ b/views/html/ofertas copy.html
@@ -9,6 +9,7 @@
 		<script src="../js/src/helpers.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
     	<link rel="stylesheet" type="text/css" href="../css/main.css">
+    	<link rel="stylesheet" type="text/css" href="../css/ofertasEstilo.css">
    
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="../css/personal.css">
@@ -45,47 +46,50 @@
 
 <!-- SECCION DE LISTAS
 ================================================== -->
-<section class="container-fluid" id="portfolio">
+<section class="container-fluid"  id="cabecera">
+	<div class="intro-wrap col-sm-12" style="height:80%;">
 
-	<div class="intro-wrap col-sm-12 " >
-		<div class="row  section-intro  animate-this">
-			<div class="col-sm-12">
-				<h1>Ofertas del mes</h1>  			
-				<p class="lead">Precios finales</p>	   			
-			</div>   		
-		</div> <!-- end row section-intro -->   		
-	</div> <!-- end intro-wrap -->
+		
+       	<div class="container-fluid"><h1 id="nombreLista">Ofertas del mes</h1>			
+       	<div class="container-fluid"><h1 id="ultimaActualizacion">condicion de pago: contado</h1></div> 	 
+			<div class="container-fluid">  
+				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
+					<div class="row">
+					  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
+						  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
+							<h2 class="card-title titulo" style="color:whitesmoke"></h2>
+							<h5 class="card-text detalle" style="color:whitesmoke"></h5>
+							<img class="imagenOferta">
+							<h2 class="card-title precio" style="color:whitesmoke"></h2>
+						  </div>
+					 	</div>
+					</div>  
+				</div> 
+			</div>
+		</div> 
+
+<!-- 
+		<div class="container-fluid"><h1 id="nombreLista">Kits Filtros</h1>		
+		<div class="container-fluid"><h1 id="ultimaActualizacion">condicion de pago: contado</h1></div> 	 
+			<div class="container-fluid">  
+				<div class="container-fluid  ofertas" style="justify-content: left;" >
+					<div class="row">
+					  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
+						  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
+							<h2 class="card-title titulo" style="color:whitesmoke"></h2>
+							<h5 class="card-text detalle" style="color:whitesmoke"></h5>
+							<img class="imagenOferta">
+							<h2 class="card-title precio" style="color:whitesmoke"></h2>
+						  </div>
+						 </div>
+					</div>  
+				</div> 
+			</div>
+		</div>  -->
 
 
-	<div class="container-fluid ofertasDelMes competencias row" style="justify-content: left;" >
 
-		  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
-			  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
-				<h2 class="card-title titulo" style="color:whitesmoke"></h2>
-				<h5 class="card-text detalle" style="color:whitesmoke"></h5>
-				<img class="imagenOferta">
-				<h2 class="card-title precio" style="color:whitesmoke"></h2>
-			  </div>
-		  </div>
-	
-	</div> 
-
-	<!--Kits de fitlros Fram-->
-	
-	<div class="container-fluid  kitsFram competencias" style="justify-content: left;" >
-		<div class="row">
-		  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
-			  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
-				<h2 class="card-title titulo" style="color:whitesmoke"></h2>
-				<h5 class="card-text detalle" style="color:whitesmoke"></h5>
-				<img class="imagenOferta">
-				<h2 class="card-title precio" style="color:whitesmoke"></h2>
-			  </div>
-		  </div>
-		</div>  
-	</div> 
-
-</section> 
+	</div>
 
 
 
