--- a/views/html/resumenDeCuenta.html
+++ b/views/html/resumenDeCuenta.html
@@ -6,10 +6,10 @@
   <title> Lista de precios </title> 
   <!-- css styles             --><link rel="stylesheet" type="text/css" href="../css/style.css">
   <!-- css main               --><link rel="stylesheet" type="text/css" href="../css/main.css">
-  <!-- css personal           --><link rel="stylesheet" type="text/css"href="../css/personal.css">  
+  <!-- css personal           --><link rel="stylesheet" href="../css/personal.css">  
   <!-- css personal           --><link rel="stylesheet" href="../css/listaEspecificaEstilo.css">  
-  <!-- sticky header          --><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
-  <!-- sticky header          --><link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"> 
+  <!-- sticky header          --><link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
+  <!-- sticky header          --><link rel="stylesheet" href= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"> 
   <!-- sticky header          --><link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet">
   <!-- sticky header          --><link rel="stylesheet" href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">
   <!-- jquery                 --><script src="../js/src/jquery.js"></script>
@@ -67,7 +67,18 @@
 						</thead> 
 					</table> 
 				</div> 
-			</div>   		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		  
+		
+	</div>   		
 </section>
 
 
