--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -7,7 +7,7 @@
 		<title>Lista de precios</title>
 		<script src="../js/src/jquery.js"></script>
 		<script src="../js/src/helpers.js"></script>
-		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/listas.css">
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 
@@ -31,13 +31,13 @@
 	<nav id="menu-nav-wrap">
 		<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 		<h3>Renova</h3>  
-		 <ul class="nav-list">
-			 <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-			 <li><a class="" href="#about" title="">About</a></li>
-			 <li><a class="" href="#services" title="">Services</a></li>
-			 <li><a class="" href="#portfolio" title="">Works</a></li>
-			 <li><a class="" href="listas.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						
-		 </ul>	
+		<ul class="nav-list">
+			<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
+			<li><a class="" href="views/html/listas.html" title="">Listas</a></li>
+			<li><a class="" href="views/html/ofertas.html" title="">Ofertas</a></li>
+			<li><a class="" href="views/html/faq.html" title="">Abrir un lubricentro</a></li>
+			<li><a class="" href="views/html/resumenDeCuenta.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						
+		</ul>		
 	 </nav>  <!-- end #menu-nav-wrap -->
 
 </header> <!-- end header -->  
@@ -56,6 +56,5 @@
 
 
 </body>
-<script src="../js/competencia.js"></script>
 <script src="../js/listasService.js"></script>
 </html>
