--- a/views/html/ofertas copy.html
+++ b/views/html/ofertas copy.html
@@ -55,12 +55,12 @@
 			<div class="container-fluid">  
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 					<div class="row">
-					  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
-						  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
-							<h2 class="card-title titulo" style="color:whitesmoke"></h2>
-							<h5 class="card-text detalle" style="color:whitesmoke"></h5>
+					  <div class="col-sm-4 oferta" id="plantilla" style="padding:1em;">
+						  <div id="recatnguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
 							<img class="imagenOferta">
-							<h2 class="card-title precio" style="color:whitesmoke"></h2>
+							<h2 class="precio"></h2>
 						  </div>
 					 	</div>
 					</div>  
@@ -68,24 +68,24 @@
 			</div>
 		</div> 
 
-<!-- 
+ 
 		<div class="container-fluid"><h1 id="nombreLista">Kits Filtros</h1>		
 		<div class="container-fluid"><h1 id="ultimaActualizacion">condicion de pago: contado</h1></div> 	 
 			<div class="container-fluid">  
-				<div class="container-fluid  ofertas" style="justify-content: left;" >
+				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
-					  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
-						  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
-							<h2 class="card-title titulo" style="color:whitesmoke"></h2>
-							<h5 class="card-text detalle" style="color:whitesmoke"></h5>
-							<img class="imagenOferta">
-							<h2 class="card-title precio" style="color:whitesmoke"></h2>
-						  </div>
-						 </div>
+					  	<div class="col-sm-4 kit" id="plantilla" style="padding:1em;">
+						  	<div class="card-body">
+								<h2 class="titulo"></h2>
+								<h5 class="detalle"></h5>
+								<img class="imagenKit">
+								<h2 class="precio"></h2>
+						  	</div>
+						</div>
 					</div>  
 				</div> 
 			</div>
-		</div>  -->
+		</div>  
 
 
 
