--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -60,7 +60,7 @@
 	<div class="container-fluid ofertasDelMes competencias row" style="justify-content: left;" >
 
 		  <div class="col-sm-4 competenciaPlantilla" id="plantilla" style="padding:1em;">
-			  <div class="card-body" id="recatnguloOferta" style="background-color: #151515;;">
+			  <div class="card-body" id="recatnguloOferta" >
 				<h2 class="card-title titulo" style="color:whitesmoke"></h2>
 				<h5 class="card-text detalle" style="color:whitesmoke"></h5>
 				<img class="imagenOferta">
