--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -12,25 +12,42 @@
     font-size:4em;
 }
 #ultimaActualizacion{
-    color:whitesmoke;
+    color:rgb(207, 207, 207);
     font-size:2em;
 }
 
 
-/*///////////////////////////////BARRA DE BUSQUEDA*/
-.search{
-    background-color: whitesmoke;
-    border-radius:0.5em;
+/*///////////////////////////////KITS y OFERTAS */
+.titulo{
+    background-color: black;
+    padding-left: 0.5em;
+    color:whitesmoke;
+
 }
 
+.precio{
+  text-align: right;
+  font-size:4em;  
+  color:black;
+}
 
-@media only screen and (max-width: 480px) {
-    .columns.columns-right.btn-group.float-right{
-      display:none;
-    }
+.detalle{
+   color:black;
+   height:5em;  
+}
 
-    .float-left.search.btn-group{
-        width:100%;
-    }
+.imagenKit{
+    width:100%;
+    height:15em;
+  }
+
+.imagenOferta{
+    width:100%;
+    height:25em;
+}
+s 
+  
+  .rectanguloOfertas{
+   height:15%;
   }
 
