combo y kits por separado

--- a/views/html/ofertas copy.html
+++ b/views/html/ofertas copy.html
@@ -46,12 +46,15 @@
 
 <!-- SECCION DE LISTAS
 ================================================== -->
-<section class="container-fluid"  id="cabecera">
-	<div class="intro-wrap col-sm-12" style="height:80%;">
+<div class="container-fluid cabecera"> 
+	<h1>OFERTAS</h1>
+	<h2>Disponibles segun stock. Precios Finales.</h2>
+</div>
 
-		
-       	<div class="container-fluid"><h1 id="nombreLista">Ofertas del mes</h1>			
-       	<div class="container-fluid"><h1 id="ultimaActualizacion">condicion de pago: contado</h1></div> 	 
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+       	<div class="container-fluid"><h1 id="titulo">COMBOS</h1>			
+       	<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
 			<div class="container-fluid">  
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 					<div class="row">
@@ -67,12 +70,16 @@
 				</div> 
 			</div>
 		</div> 
+	</div>
+</section>
 
  
+	<section class="container-fluid">
+		<div class="intro-wrap col-sm-12">
 		<div class="container-fluid"><h1 id="nombreLista">Kits Filtros</h1>		
 		<div class="container-fluid"><h1 id="ultimaActualizacion">condicion de pago: contado</h1></div> 	 
 			<div class="container-fluid">  
-				<div class="container-fluid  competencias kits" style="justify-content: left;" >
+				<div class="container-fluid  competencias kits" >
 					<div class="row">
 					  	<div class="col-sm-4 kit" id="plantilla" style="padding:1em;">
 						  	<div class="card-body">
@@ -90,6 +97,7 @@
 
 
 	</div>
+</section>
 
 
 
