--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -1,19 +1,33 @@
 /*////////////////////////////////////////////FONDO*/
-#cabecera{
+.cabecera{
     background-color: black;
-    height:40em;
+    height:20em;
+    padding-top:10em; 
+    padding-bottom:20em;
 }
+
+.cabecera h1{
+    font-size:13vmin;
+    color:white;
+}
+
+.cabecera h2{
+    font-size:4vmin;
+    text-align:center;
+    color:white;
+} 
 
 
 /*///////////////////////////////TITULO Y SIBTITULO*/
-#nombreLista{
-    color:whitesmoke;
-    padding-top:3%;
-    font-size:4em;
+.container-fluid #titulo{
+    color:black;
+    padding-top:3vmin;
+    font-size:6vmin;
 }
-#ultimaActualizacion{
+.container-fluid #subtitulo{
     color:rgb(207, 207, 207);
-    font-size:2em;
+    font-size:4vmin;
+    padding-bottom: 2vmin;
 }
 
 
@@ -21,6 +35,8 @@
 .titulo{
     background-color: black;
     padding-left: 0.5em;
+    text-align: center;
+    padding:0.4em;
     color:whitesmoke;
 
 }
@@ -28,7 +44,7 @@
 .precio{
   text-align: right;
   font-size:4em;  
-  color:black;
+  color:orangered;
 }
 
 .detalle{
@@ -45,9 +61,15 @@
     width:100%;
     height:25em;
 }
-s 
-  
-  .rectanguloOfertas{
-   height:15%;
-  }
 
+.rectanguloOfertas{
+   height:15%;
+}
+
+.ofertas {
+    justify-content: left;
+}
+
+.kits {
+    justify-content: left;;
+}
