--- a/views/css/listaEspecificaEstilo.css
+++ b/views/css/listaEspecificaEstilo.css
@@ -17,6 +17,14 @@
 }
 
 
+/*////////////////////////////////TABEL DATA*/
+
+td, th{
+    font-size:2.5vmin;
+    font-family:Arial, Helvetica, sans-serif;
+
+}
+
 /*///////////////////////////////BARRA DE BUSQUEDA*/
 .search{
     background-color: whitesmoke;
