agrego columan stock

--- a/views/html/listasEspecifica.html
+++ b/views/html/listasEspecifica.html
@@ -59,10 +59,11 @@
 							data-toolbar-align="left">
 						<thead class="thead-dark"> 
 							  <tr> 
-								  <th data-field="cod_articulo">  						Articulo		</span style="text-align: center;"></th> 
-								  <th data-field="descrip_arti" class="text-wrap">  						Descripcion		</span style="text-align: left;"> </th> 
-								  <th data-field="precio_vta" data-width="90" class="text-right">    		Precio sin IVA 	</span> </th>
-								  <th data-field="precio_vta_final" data-width="90"class="text-right">  	Precio con IVA 	</span> </th>  
+								  <th data-field="id">  						Articulo		</span style="text-align: center;"></th> 
+								  <th data-field="d" class="text-wrap">  						Descripcion		</span style="text-align: left;"> </th> 
+								  <th data-field="p" data-width="90" class="text-right">    		Precio sin IVA 	</span> </th>
+								  <th data-field="pf" data-width="90"class="text-right">  	Precio con IVA 	</span> </th>  
+								  <th data-field="s" data-width="90"class="text-right">  	stock	</span> </th>  
 							  </tr> 
 						</thead> 
 					</table> 
