--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -27,23 +27,26 @@
 <!-- NAV BAR
 ================================================== -->
 <header>
-<a id="header-menu-trigger" href="#0">
-          <span class="header-menu-text">Menu</span>
-           <span class="header-menu-icon"></span>
-    </a> 
-    <nav id="menu-nav-wrap">
-        <a href="#0" class="close-button" title="close"><span>Close</span></a>	
-        <h3>Renova</h3>  
-         <ul class="nav-list">
-             <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-             <li><a class="" href="#about" title="">About</a></li>
-             <li><a class="" href="#services" title="">Services</a></li>
-             <li><a class="" href="#portfolio" title="">Works</a></li>
-             <li><a class="" href="listas.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						
-         </ul>	
-     </nav>  <!-- end #menu-nav-wrap -->
 
-</header> <!-- end header -->  
+
+	<a id="header-menu-trigger" href="#0">
+		  <span class="header-menu-text">Menu</span>
+		   <span class="header-menu-icon"></span>
+	</a> 
+	<nav id="menu-nav-wrap">
+		<a href="#0" class="close-button" title="close"><span>Close</span></a>	
+		<h3>Renova</h3>  
+		<ul class="nav-list">
+			<li><a class="" href="../../index.html" 		title="">Home</a></li>
+			<li><a class="" href="listas.html"				title="">Listas</a></li>
+			<li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
+			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>
+			<li><a class="" href="resumenDeCuenta.html" 	title="" style="color:orange">Ingresar a mi cuenta</a></li>								
+		</ul>		
+	 </nav>  <!-- end #menu-nav-wrap -->
+
+</header> <!-- end header --> 
+
     
 <!-- HOME
 ================================================== -->
