--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -5,8 +5,14 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
 		<title>Lista de precios</title>
+		<link rel="stylesheet" 		href="./views/css/base.css">
+		<link rel="stylesheet" 		href="./views/css/vendor.css">
+		<link rel="stylesheet" 		href="./views/css/main.css">
+		<link rel="stylesheet" 		href="./views/css/personal.css">
 		<script src="../js/src/jquery.js"></script>
 		<script src="../js/src/helpers.js"></script>
+		<script src="../js/src/modernizr.js"></script>
+		<script src="..js/src/pace.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/listas.css">
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
@@ -32,11 +38,11 @@
 		<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 		<h3>Renova</h3>  
 		<ul class="nav-list">
-			<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-			<li><a class="" href="views/html/listas.html" title="">Listas</a></li>
-			<li><a class="" href="views/html/ofertas.html" title="">Ofertas</a></li>
-			<li><a class="" href="views/html/faq.html" title="">Abrir un lubricentro</a></li>
-			<li><a class="" href="views/html/resumenDeCuenta.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						
+			<li><a class="" href="../../index.html" 		title="">Home</a></li>
+			<li><a class="" href="listas.html"				title="">Listas</a></li>
+			<li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
+			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>
+			<li><a class="" href="resumenDeCuenta.html" 	title="" style="color:orange">Ingresar a mi cuenta</a></li>								
 		</ul>		
 	 </nav>  <!-- end #menu-nav-wrap -->
 
@@ -56,5 +62,7 @@
 
 
 </body>
+<script src="../js/src/plugins.js"></script>
+<script src="../js/src/main.js"></script>
 <script src="../js/listasService.js"></script>
 </html>
