--- a/views/html/resumenDeCuenta.html
+++ b/views/html/resumenDeCuenta.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
   <title> Lista de precios </title> 
+  <link rel="stylesheet" 		href="./views/css/base.css">
+  <link rel="stylesheet" 		href="./views/css/vendor.css">
+  <link rel="stylesheet" 		href="./views/css/main.css">
+  <link rel="stylesheet" 		href="./views/css/personal.css">
   <!-- css styles             --><link rel="stylesheet" type="text/css" href="../css/style.css">
   <!-- css main               --><link rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- css personal           --><link rel="stylesheet" href="../css/personal.css">  
@@ -29,15 +33,35 @@
   <!-- loading template       --><link href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">
 </head> 
 
+<header>
 
+
+	<a id="header-menu-trigger" href="#0">
+		  <span class="header-menu-text">Menu</span>
+		   <span class="header-menu-icon"></span>
+	</a> 
+	<nav id="menu-nav-wrap">
+		<a href="#0" class="close-button" title="close"><span>Close</span></a>	
+		<h3>Renova</h3>  
+		<ul class="nav-list">
+			<li><a class="" href="../../index.html" 		title="">Home</a></li>
+			<li><a class="" href="listas.html"				title="">Listas</a></li>
+			<li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
+			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>
+			<li><a class="" href="resumenDeCuenta.html" 	title="" style="color:orange">Ingresar a mi cuenta</a></li>								
+		</ul>		
+	 </nav>  <!-- end #menu-nav-wrap -->
+
+</header> <!-- end header --> 
 
 
 <!-- TABLA DE LISTA DE PRECIOS
 ================================================== -->
 <body> 
 
-<section class="container-fluid"  id="cabecera">
-	<div class="intro-wrap col-sm-12" style="height:80%;">
+<section class="container-fluid"  id="cabecera"> 
+	<H1 style="color:whitesmoke; font-size: 10vmin; ">en contrsuccion</H1>
+	<!-- <div class="intro-wrap col-sm-12" style="height:80%;">
       		<div class="col-sm-12"></div>
        	 	<div class="container-fluid"><h1 id="nombreLista"></h1></div> 			
        	 	<div class="container-fluid"><h1 id="ultimaActualizacion">Ultima actulizacion: Sep 2020</h1></div> 	 
@@ -78,11 +102,12 @@
 		
 		  
 		
-	</div>   		
+	</div>   		 -->
 </section>
 
 
-
+<script src="../js/src/plugins.js"></script>
+<script src="../js/src/main.js"></script>
 
 
 <script src="../js/listaEspecificaService.js"></script>
