--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -5,17 +5,19 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
 		<title>Ofertas del mes</title>
-		<script src="../js/src/jquery.js"></script>
-		<script src="../js/src/helpers.js"></script>
-		<link rel="stylesheet" type="text/css" href="../css/base.css">
-		<link rel="stylesheet" type="text/css" href="../css/vendor.css">
-		<link rel="stylesheet" type="text/css" href="../css/style.css">
-    	<link rel="stylesheet" type="text/css" href="../css/main.css">
-		<link rel="stylesheet" type="text/css" href="../css/ofertasEstilo.css">
-		<script src="../js/src/modernizr.js"></script>
-		<script src="../js/src/pace.min.js"></script>
+		
+		<link rel="stylesheet" type="text/css" href=	"../css/base.css">
+		<link rel="stylesheet" type="text/css" href=	"../css/vendor.css">
+		<link rel="stylesheet" type="text/css" href=	"../css/style.css">
+		<link rel="stylesheet" type="text/css" href=	"../css/main.css">
+		<link rel="stylesheet" type="text/css" href=    "../css/personal.css">
+
+		<script src=									"../js/src/modernizr.js"></script>
+		<script src=									"../js/src/pace.min.js"></script>
+		<script src=									"../js/src/jquery.js"></script>
+		<script src=									"../js/src/helpers.js"></script>
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="../css/personal.css">
+		<link rel="stylesheet" type="text/css" href=	"../css/ofertasEstilo.css">			
 	</head>
 
 <!--salto de linea en negro al ppio de la hoja-->
@@ -58,10 +60,10 @@
 	<div class="intro-wrap col-sm-12">
        	<div class="container-fluid"><h1 id="titulo">COMBOS</h1>			
        	<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
-			<div class="container-fluid">  
+		 
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 					<div class="row">
-					  <div class="col-sm-4 oferta" id="plantilla" style="padding:1em;">
+					  <div class="col-6 col-sm-4 oferta" id="plantilla" style="padding:1em;">
 						  <div id="recatnguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -69,7 +71,7 @@
 							<h2 class="precio"></h2>
 						  </div>
 					 	</div>
-					</div>  
+				
 				</div> 
 			</div>
 		</div> 
@@ -84,7 +86,7 @@
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
-					  	<div class="col-sm-4 kit" id="plantilla2" style="padding:1em;">
+					  	<div class="col-6 col-sm-4 kit" id="plantilla2" style="padding:1em;">
 						  	<div class="recatnguloOferta">
 								<h2 class="titulo"></h2>
 								<h5 class="detalle"></h5>
