--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -55,12 +55,12 @@
 
 .imagenKit{
     width:100%;
-    height:15em;
+    height:30vmin;
   }
 
 .imagenOferta{
     width:100%;
-    height:25em;
+    height:25vmin;
 }
 
 .rectanguloOfertas{
@@ -74,3 +74,28 @@
 .kits {
     justify-content: left;;
 }
+
+/*/////////////////////////RESPONSIVE//*/
+@media only screen and (max-width: 450px) {
+    .container-fluid{
+    padding:0px;
+    margin:0px;
+    }
+
+    .intro-wrap{
+        padding:0px;
+        margin:0px;
+    }
+    section{
+        padding:0px;
+        margin:0px;
+    }
+
+    .precio{
+        text-align: right;
+        font-size:4em;  
+        color:green;
+      }
+      
+  }
+
