--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -58,9 +58,10 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
-       	<div class="container-fluid"><h1 id="titulo">COMBOS</h1>			
-       	<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
-		 
+		<div id="seccionLista">
+       		<div class="container-fluid"><h1 id="titulo">COMBOS</h1>	</div>		
+       		<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
+		</div>
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 					<div class="row">
 					  <div class="col-6 col-sm-4 oferta" id="plantilla" style="padding:1em;">
@@ -72,7 +73,7 @@
 						  </div>
 					 	</div>
 				
-				</div> 
+				 
 			</div>
 		</div> 
 	</div>
@@ -81,8 +82,10 @@
  
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
-		<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1>		
-		<div class="container-fluid"><h1 id="subtitulo">condicion de pago: contado</h1></div> 	 
+			<div id="seccionLista"></div>
+				<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1>		
+				<div class="container-fluid"><h1 id="subtitulo">condicion de pago: contado</h1></div> 	 
+			</div>
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
