--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -1,6 +1,8 @@
 /*////////////////////////////////////////////FONDO*/
 .cabecera{
-    background-color: black;
+    background-image: url(../images/fondoNaranja.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     height:20em;
     padding-top:10em; 
     padding-bottom:20em;
@@ -20,8 +22,8 @@
 
 /*///////////////////////////////TITULO Y SIBTITULO*/
 .container-fluid #titulo{
-    color:black;
-    padding-top:3vmin;
+    color:whitesmoke;
+   
     font-size:8vmin;
     padding-top:10vmin;
 }
@@ -31,6 +33,10 @@
     padding-bottom: 2vmin;
 }
 
+#seccionLista{
+    background-color: black;
+   margin-top:3vmin;
+}
 
 /*///////////////////////////////KITS y OFERTAS */
 .titulo{
@@ -77,7 +83,7 @@
 
 /*/////////////////////////RESPONSIVE//*/
 @media only screen and (max-width: 450px) {
-    .container-fluid{
+    section .container-fluid{
     padding:0px;
     margin:0px;
     }
