--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -48,7 +48,7 @@
 	 </nav>  <!-- end #menu-nav-wrap -->
 </header> <!-- end header -->  
 
-
+<body style="background-color: #efefef;">
 <!-- SECCION DE LISTAS
 ================================================== -->
 <div class="container-fluid cabecera"> 
@@ -58,17 +58,17 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
-		<div id="seccionLista">
-       		<div class="container-fluid"><h1 id="titulo">COMBOS</h1>	</div>		
+
+       		<div class="container-fluid"><h1 id="titulo">COMBOS</h1></div>		
        		<div class="container-fluid"><h1 id="subtitulo">Los cantidades minimas son als indicadas</h1></div> 	 
-		</div>
+
 				<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 					<div class="row">
 					  <div class="col-6 col-sm-4 oferta" id="plantilla" style="padding:1em;">
-						  <div id="recatnguloOferta">
+						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
-							<img class="imagenOferta">
+							<img class="imagenOferta center">
 							<h2 class="precio"></h2>
 						  </div>
 					 	</div>
@@ -82,22 +82,21 @@
  
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
-			<div id="seccionLista"></div>
-				<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1>		
+				<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1></div>	
 				<div class="container-fluid"><h1 id="subtitulo">condicion de pago: contado</h1></div> 	 
-			</div>
+	
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
 					  	<div class="col-6 col-sm-4 kit" id="plantilla2" style="padding:1em;">
-						  	<div class="recatnguloOferta">
+						  	<div class="rectanguloOferta">
 								<h2 class="titulo"></h2>
 								<h5 class="detalle"></h5>
 								<img class="imagenKit">
 								<h2 class="precio"></h2>
 						  	</div>
 						</div>
-					</div>  
+					  
 				</div> 
 			</div>
 		</div>  
