--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -68,7 +68,7 @@
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
-							<img class="imagenOferta center">
+							<div><img class="imagenOferta center"></div>
 							<h2 class="precio"></h2>
 						  </div>
 					 	</div>
