--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -3,8 +3,8 @@
     background-image: url(../images/fondoNaranja.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    height:20em;
-    padding-top:10em; 
+    height:15em;
+    padding-top:5em; 
     padding-bottom:20em;
 }
 
@@ -29,6 +29,8 @@
     margin-top:3vmin;
     font-size:10vmin;
     padding-top:10vmin;
+    text-shadow: 2px 2px 4px rgb(83, 83, 83);
+   
 }
 .container-fluid #subtitulo{
     color:rgb(128, 121, 121);
@@ -50,6 +52,7 @@
     padding:0.4em;
     color:whitesmoke;
     font-size: 3.5vmin;
+
 
 }
 
@@ -73,7 +76,6 @@
   }
 
 .imagenOferta{
-
     height:25vmin;
 }
 
@@ -119,7 +121,10 @@
         padding-right: 0
 
     }
-  
+    .cabecera{
+        padding-top:8em;
+        padding-bottom:10em;
+    }
 
   }
 
